--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--links-->
     <link rel="stylesheet" href="./styles/normalize.css"> <!--Este archivo normaliza las salidas en los diferentes navegadores-->
     <link rel="stylesheet" href="./styles/styles.css">
+
+
+    <!--FAv icon-->
+    <link rel="shortcut icon" href="./assets/javascript.ico" type="image/x-icon">
+    
     <title>Color pickier</title>
 </head>
 <body>
