--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--links-->
+    <!--links CSS-->
     <link rel="stylesheet" href="./styles/normalize.css"> <!--Este archivo normaliza las salidas en los diferentes navegadores-->
     <link rel="stylesheet" href="./styles/styles.css">
 
 
     <!--FAv icon-->
     <link rel="shortcut icon" href="./assets/javascript.ico" type="image/x-icon">
+
+    <!--JS-->
+    <script src="./js/setColor.js"></script>
+    <script src="./js/saveColor.js"></script>
+    <script src="./js/getColors.js"></script>
     
     <title>Color pickier</title>
 </head>
@@ -21,9 +26,16 @@
     <div class="salida" id="salida"> #ffffff </div>
 
     <div class="color-div">
-        <input type="color" id="color" vlue="#ffffff"/>
+        <input type="color" id="color" value="#ffffff"/>
+        <button onclick="saveColor(color.value)">Save Color</button>
     </div>
 
+    <div>
+        <h2>Colores Guardados: <span id="colors">0</span></h2>
+        <ul id="list"></ul>
+    </div>
+
+    <script src="./js/variables.js"></script>
     <script src="./js/color.js"></script>
     
 </body>
